2008-08-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #545820

	* mail-ops.c (save_messages_desc): Fix a typo. (Nicolas Kaiser)

2008-07-31  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #545436

	* mail/message-list.c: Check the info before accessing it.

2008-07-30  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #500389

	* em-account-editor.c: (emae_option_options_changed),
	(emae_option_options), (emae_receive_options_extra_item):
	New ability to define Options (ComboBox) in provider's options.

2008-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-folder-tree.c: Kill a compilation warning.

2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	* mail/mail-config.glade:
	Corrected string "Prompt on sending HTML.."

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #543532

	* em-folder-tree-model.c: (em_folder_tree_model_remove_store_info):
	Let free memory when we are done with it, not before.

2008-07-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #256540

	* mail-dialogs.glade: (message_security_dialog):
	Do not use GtkNotebook with only one tab.

2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	* mail/mail-config.glade:
	** See bug #504417: Preferences windows
	cut off

2008-07-28 Jeff Cai <jeff.cai@sun.com> 

	* em-migrate.c: (migrate_to_db):
	* em-network-prefs.c: (notify_proxy_type_changed),
	(widget_entry_changed_cb):
    Use G_GNUC_PRETTY_FUNCTION instead of __PRETTY__FUNCTION

2008-07-27  Lucian Langa <lucilanga@gnome.org>

	* mail/em-event.h (struct _EMEventTargetCustomIcon):
	* mail/em-event.c (em_event_target_new_custom_icon):
	* mail/em-folder-tree.c (render_pixbuf):
	** See bug #544969: Added the hook for folder
	custom icon.

2008-07-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #543411

	* mail/em-folder-tree-model.c: Dont load known folders.
	* mail/em-folder-tree.c: Move iter to the last entry.

2008-07-25  Srinivasa Ragavan  <sragavan@novell.com>
